<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootChatWindowActivity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatWindow">

    <ListView
        android:id="@+id/listView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/sendButton"
        >

    </ListView>
    <EditText
        android:id="@+id/editTextChatMessage"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_toLeftOf="@+id/sendButton"
        android:text="" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="95dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="1dp"
        android:text="@string/activity_chat_window_send_button" />
</RelativeLayout>