<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textViewLoginName"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/login_label" />

    <EditText
        android:id="@+id/editTextLoginName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/login_input_hint" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/password_label" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_input_hint" />

    <Button
        android:id="@+id/loginButton"
        android:onClick="login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text" />
    />

</LinearLayout>